--- a/punkt9.html
+++ b/punkt9.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="da">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <title>Åmosen skebelon</title>
+  <link rel="stylesheet" type="text/css" href="aamosen.css">
+</head>
 <p>&nbsp;</p>
 <p>Turen er slut, vi opfordre til at bes&oslash;ge udstillingen inde i hovedbygningen.</p>
 <p>Herefter vil der v&aelig;re en lille quiz p&aring; appen. Her vil i f&aring;r sp&oslash;rgsm&aring;l om ting der er oplyst om p&aring; turen.</p>
